changed icon,build config and updated gitignore

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "Bollywood",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
-"package-win": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Bollywood\"",    
-"package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
+    "package-win": "electron-packager . Bollywood --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --win32metadata.ProductName='Bollywood' --win32metadata.InternalName='Bollywood' --win32metadata.OriginalFilename='Bollywood' --win32metadata.CompanyName=\"Aaditya Joshi\"",
+    "package-linux": "electron-packager . Bollywood --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "electron": "3.0.9",
-    "electron-packager": "^13.0.1"
+    "electron-packager": "^13.1.1"
   }
 }
